# multiprofit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYRIGHT  README.rst  SConstruct  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.multiprofit/: index.rst
examples/: 222.51551376,0.09749601_300x300_g.fits  222.51551376,0.09749601_300x300_i.fits  222.51551376,0.09749601_300x300_mask_inv_highsn.npz  222.51551376,0.09749601_300x300_r.fits  222.51551376,0.09749601_g_psf.fits  222.51551376,0.09749601_i_psf.fits  222.51551376,0.09749601_r_psf.fits  fitcosmos.py  fithsc.ipynb  fithsc.py  fithsc_src.csv  modelspecs-all-psfg2.csv  modelspecs-best-psfg2.csv  modelspecs-gausspx-psfg2.csv  modelspecs-gausspx-psfg3.csv  modelspecs-gausspx-psfg4.csv  modelspecs-mg-no-rs-psfg2.csv  modelspecs-mg-psfg2.csv  modelspecs-mg8-base-cmodel-psfg2.csv  modelspecs-mg8-base-linear-psfg2.csv  modelspecs-mg8-base-psfg2.csv  modelspecs-mg8-sermpx-psfg2.csv  modelspecs-plot-final-psfg2.csv  modelspecs-serbpx-psfg2.csv  modelspecs-sersic-psfg2.csv  plot_sersic_mix.py  test_gaussian_gradients.py  test_gaussians.py  test_mgsersic.py  test_utils.py
multiprofit/: __init__.py  asinhstretchsigned.py  componentconfig.py  config.py  ellipse.py  fit_bootstrap_model.py  fit_catalog.py  fit_psf.py  fit_source.py  fitutils.py  gaussutils.py  limits.py  logger.py  modeller.py  multigaussianapproxprofile.py  objects.py  plots.py  priors.py  psfmodel_utils.py  pybind11.cpp  tests.py  transforms.py  util.py  utils.py
multiprofit/datautils/: gethsc.py
python/lsst/multiprofit/: asinhstretchsigned.py  componentconfig.py  config.py  errors.py  fit_bootstrap_model.py  fit_catalog.py  fit_psf.py  fit_source.py  limits.py  model_utils.py  modelconfig.py  modeller.py  multigaussianapproxprofile.py  observationconfig.py  plots.py  priors.py  psfmodel_utils.py  sourceconfig.py  transforms.py  utils.py
src/: gaussian.cpp  gaussian.h  gaussian_integrator.cpp  gaussian_integrator.h
tests/: test_componentconfig.py  test_fit.py  test_fit_bootstrap_model.py  test_fit_psf.py  test_fitting.py  test_modelconfig.py  test_modeller.py  test_observationconfig.py  test_plots.py  test_psfmodel_utils.py  test_sourceconfig.py
ups/: multiprofit.table
